Fixed spacing and layout on tablet and mobile

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -64,14 +64,14 @@ header {
 /* ================================== MEDIA QUERIES (MEDIUM DEVICES/TABLETS) ===========================*/
 @media screen and (max-width: 1024px) {
   header {
-    height: 68vh;
+    /* height: 68vh; */
   }
 }
 
 /* ================================== MEDIA QUERIES (SMALL DEVICES/TABLETS) ===========================*/
 @media screen and (max-width: 600px) {
   header {
-    height: 100vh;
+    /* height: 100vh; */
   }
 
   .header__socials,
